# DevMate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VERIFY_REPORT.md  checklist.md  config.docker.example.toml  config.rag_eval.ollama.example.toml  config.toml  docker-compose.yml  pyproject.toml  requirements.md
.skills/: hiking-trails-web-app.md
.skills/fastapi-healthcheck-api/: SKILL.md
.skills/fastapi-uv-project/: SKILL.md
.skills/hiking-trails-web-app/: SKILL.md
docs/: docker_compose_test.md  e2e_hiking_website_test.md  internal_project_guidelines.md
docs/archive/old-flat-skills/: fastapi-uv-project.md  hiking-trails-web-app.md
docs/archive/skills-before-standardization/: hiking-trails-web-app-complete.md
scripts/: preprocess_corpus.py  test_rag_retrieval.py
src/devmate/: agent.py  config.py  fastembed_embeddings.py  file_tools.py  index_docs.py  local_embeddings.py  main.py  mcp_client.py  mcp_search_server.py  model.py  preview.py  rag.py  skills.py  vectorstore_metadata.py
tests/: test_config.py  test_config_env_override.py  test_file_tools.py  test_langsmith_run_config.py  test_mcp_client.py  test_preprocess_corpus.py  test_preview.py  test_rag_split.py  test_skills_format.py  test_vectorstore_metadata.py
