[project]
name = "devmate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastmcp>=3.4.2",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "tavily-python>=0.7.25",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
